chore: update repository info and readme logo

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "llm",
     "finetuning"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/langtrain-ai/langtrain-sdk.git"
+  },
   "author": "Langtrain AI",
   "license": "MIT",
   "devDependencies": {
