--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@clack/prompts": "^1.0.1",
     "commander": "^14.0.3",
     "conf": "^15.1.0",
+    "gradient-string": "^3.0.0",
     "kleur": "^4.1.5"
   }
 }
