refactor(cli): optimize menu, modularize code, and clean up source structure

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node dist/cli.js || true"
   },
   "keywords": [
     "langtrain",
@@ -29,6 +30,7 @@
   "author": "Langtrain AI",
   "license": "MIT",
   "devDependencies": {
+    "@types/gradient-string": "^1.1.6",
     "@types/node": "^25.2.3",
     "langtune": "file:../langtune/js",
     "langvision": "file:../langvision/js",
