--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node dist/cli.js || true"
+    "postinstall": "node dist/cli.js --first-run || true"
   },
   "keywords": [
     "langtrain",
@@ -41,7 +41,6 @@
     "@clack/prompts": "^1.0.1",
     "axios": "^1.13.5",
     "commander": "^14.0.3",
-    "conf": "^15.1.0",
     "gradient-string": "^3.0.0",
     "kleur": "^4.1.5"
   }
