--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^1.13.5",
     "commander": "^14.0.3",
     "gradient-string": "^3.0.0",
-    "kleur": "^4.1.5"
+    "kleur": "^4.1.5",
+    "langtrain": "^0.1.15"
   }
 }
