--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "langtrain",
-  "version": "0.1.20",
+  "version": "0.1.22",
   "description": "Unified JavaScript SDK for Langtrain Ecosystem",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -31,6 +31,7 @@
   "author": "Langtrain AI",
   "license": "MIT",
   "devDependencies": {
+    "@types/form-data": "^2.2.1",
     "@types/gradient-string": "^1.1.6",
     "@types/node": "^25.2.3",
     "langtune": "file:../langtune/js",
@@ -41,7 +42,9 @@
   "dependencies": {
     "@clack/prompts": "^1.0.1",
     "axios": "^1.13.5",
+    "cli-table3": "^0.6.5",
     "commander": "^14.0.3",
+    "form-data": "^4.0.5",
     "gradient-string": "^3.0.0",
     "kleur": "^4.1.5",
     "langtrain": "^0.1.15"
