--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "langtrain",
-  "version": "0.1.22",
+  "version": "0.1.23",
   "description": "Unified JavaScript SDK for Langtrain Ecosystem",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -34,8 +34,8 @@
     "@types/form-data": "^2.2.1",
     "@types/gradient-string": "^1.1.6",
     "@types/node": "^25.2.3",
-    "langtune": "file:../langtune/js",
-    "langvision": "file:../langvision/js",
+    "langtune": "^0.1.1",
+    "langvision": "^0.1.1",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2"
   },
