--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "langtrain",
-  "version": "0.1.23",
+  "version": "0.1.25",
   "description": "Unified JavaScript SDK for Langtrain Ecosystem",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -34,8 +34,6 @@
     "@types/form-data": "^2.2.1",
     "@types/gradient-string": "^1.1.6",
     "@types/node": "^25.2.3",
-    "langtune": "^0.1.1",
-    "langvision": "^0.1.1",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2"
   },
@@ -47,6 +45,8 @@
     "form-data": "^4.0.5",
     "gradient-string": "^3.0.0",
     "kleur": "^4.1.5",
-    "langtrain": "^0.1.15"
+    "langtrain": "^0.1.15",
+    "langtune": "^0.1.1",
+    "langvision": "^0.1.1"
   }
 }
